--- a/README
+++ b/README
@@ -6,4 +6,13 @@ To copy builder write in console:
 
 3) git pull origin master
 
+
+To start developing write in console:
+
+1) npm install
+
+//Wait until everything is established
+
+2) gulp
+
 Enjoy!!!
